# TeterAI_CA

./: .abacus.donotdelete  .gcloudignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  TeterCA migration guide.md  USER_GUIDE.md  build-win.bat  build-win.ps1  desktop_server.py  fix_client.py  fix_dashboard.py  fix_indent.py  fix_indent_dispatcher.py  fix_ingestion.py  fix_ingestion2.py  fix_ingestion3.py  fix_ingestion4.py  fix_ingestion5.py  fix_ingestion6.py  fix_ingestion7.py  fix_ingestion8.py  main.py  modified_agent.py  patch.py  patch2.py  patch3.py  patch4.py  patch5.py  patch6.py  patch7.py  patch8.py  patch9.py  patch_app.py  patch_client_dimension.py  patch_dash_imports.py  patch_dash_labels.py  patch_dash_status.py  (+49 more)
build-resources/: README.md
mcp_server/: __init__.py  neo4j_mcp.py
scripts/: export_kg_to_obsidian.py  generate_icon.py  ingest_drive_to_kg.py  ingest_rfis_to_kg.py  init_kg.py  kg_builder_rfis.py  process_project_documents.py  seed_drive_folders.py  seed_kg_baseline.py  seed_test_ingest.py  setup_kg_schema.py  update_registry_models.py  verify_models.py
specs/: Teter_AI_Enterprise_Master_Spec.md
specs/master/: TETER-CA-AI-MPS-001 v0.2.0 Master Project Specification.docx
specs/phase-0/: TETER-CA-AI-AEC-001_AI-Engine-Configuration.md  TETER-CA-AI-AGT-DISPATCH-001_Dispatcher-Agent.md  TETER-CA-AI-AGT-RFI-001_RFI-Agent.md  TETER-CA-AI-AUDIT-001_Audit-Trail-Logging.md  TETER-CA-AI-INT-DRIVE-001_Drive-Structure.md  TETER-CA-AI-INT-GMAIL-001_Gmail-Integration.md  TETER-CA-AI-KG-001_Knowledge-Graph-Architecture.md  TETER-CA-AI-SEC-001_Security-Access-Control.md  TETER-CA-AI-UI-001_Unified-Web-Mobile-App.md  TETER-CA-AI-WF-001_Task-Queue-Workflow-Engine.md
specs/phase-1/: TETER-CA-AI-DESK-001_Desktop-App-Local-Storage.md
src/ai_engine/: default_registry.json  engine.py  gcp.py  models.py
src/audit/: __init__.py  logger.py  models.py
src/config/: __init__.py  local_config.py  local_integration.py
src/document_analysis/: __init__.py  comparison_view.py  document_analysis_service.py  model_response.py
src/document_intelligence/: __init__.py  query.py  service.py
src/embeddings/: __init__.py  ingest_embedder.py  models.py  providers.py  service.py
src/grading/: __init__.py  grading_models.py  grading_service.py  grading_storage.py  human_grading.py
tests/: Submittal Review Comparison.docx  Submittal Review Template.docx  conftest.py  test_ai_engine.py  test_audit_logger.py  test_dispatcher.py  test_drive_integration.py  test_engine_embeddings.py  test_gmail_integration.py  test_kg_client.py  test_kg_ingestion.py  test_rfi_agent.py  test_seed_kg_baseline.py  test_setup_kg_schema.py
(+142 files in other folders)
