[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "google-cloud-firestore>=2.25.0",
    "google-cloud-secret-manager>=2.26.0",
    "httpx>=0.28.0",
    "litellm>=1.82.4",
    "neo4j>=6.1.0",
    "pydantic>=2.12.5",
    "PyJWT>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-multipart>=0.0.20",
    "python-docx>=1.1.2",
    "pypdf>=5.0.0",
    "uvicorn>=0.42.0",
]
